--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <div class="actions">
                 <button id="esportaBtn">Esporta dati</button>
-                <button id="resetBtn">Reset settimana</button>
+                <button id="resetBtn">Reset settimana!</button>
             </div>
         </div>
         
