--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             <div class="control-group">
                 <label for="inputCode">Code:</label>
                 <input type="number" id="inputCode" placeholder="Start typing..." autocomplete="off">
+                <div class="input-group">
+                    <label for="inputQuantity">Quantity:</label>
+                    <input type="number" id="inputQuantity" min="1" value="1">
+                </div>
                 <button id="submit">Delete</button>
             </div>
             
             <div class="control-group">
                 <label for="fileInput">Import codes from CSV:</label>
                 <div class="file-input-wrapper">
-                    <input type="file" id="fileInput" accept=".csv,.txt,text/csv,application/csv" style="display:none;">
+                    <input type="file" id="fileInput" style="display:none;">
                     <button type="button" id="importButton" class="file-button">Select file</button>
                     <span id="fileNameDisplay">No file selected</span>
                 </div>
@@ -49,6 +53,6 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
