--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <div class="actions">
                 <button id="exportBtn">Export data</button>
-                <button id="resetBtn">Reset week!</button>
+                <button id="resetBtn">Reset week</button>
             </div>
         </div>
         
